--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,11 @@ buildscript {
 allprojects {
     repositories {
         maven { url 'https://raw.githubusercontent.com/onepf/OPF-mvn-repo/master/' }
+        maven { url 'https://bitbucket.org/atm13/artifacts/raw/master/' }
         jcenter()
+        flatDir {
+            dirs 'libs'
+        }
     }
 }
 
@@ -81,6 +85,9 @@ android {
                     "com.topface.billing.MarketApiType.NOKIA_STORE";
             buildConfigField "String", "STATISTICS_APP", "\"topfacemobappandroidnokia\"";
         }*/
+        ifree {
+            buildConfigField "String", "STATISTICS_APP", "\"topfacemobappifree\"";
+        }
     }
 
     compileOptions {
@@ -122,9 +129,15 @@ android {
     }
 
     buildTypes {
+        debug {
+            minifyEnabled true
+            shrinkResources false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'),
+                    getDefaultProguardFile('proguard-android-optimize.txt'),
+                    'proguard-config.txt'
+        }
         release {
             signingConfig signingConfigs.release
-            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'),
                     getDefaultProguardFile('proguard-android-optimize.txt'),
                     'proguard-config.txt'
@@ -137,10 +150,6 @@ android {
             versionNameSuffix ".${getQaVersion(versionProps)}-qa"
             buildConfigField "long", "BUILD_TIME", "${getTimestamp()}L";
             buildConfigField "String", "GIT_HEAD_SHA", "\"${getGitHeadSha()}\"";
-            minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'),
-                    getDefaultProguardFile('proguard-android-optimize.txt'),
-                    'proguard-config.txt'
         }
     }
 
@@ -152,9 +161,12 @@ android {
         exclude 'LICENSE.txt'
     }
 
-    //@see https://code.google.com/p/android/issues/detail?id=40409
     dexOptions {
-        jumboMode = true
+        //@see https://code.google.com/p/android/issues/detail?id=40409
+        jumboMode true
+        //@see https://code.google.com/p/android/issues/detail?id=176638
+        incremental true
+        javaMaxHeapSize "4g"
     }
 
     lintOptions {
@@ -185,7 +197,14 @@ dependencies {
     compile "com.google.android.gms:play-services-gcm:7.3.0"
     compile "com.google.android.gms:play-services-ads:7.3.0"
     //All jar libs
-    compile fileTree(dir: 'libs', exclude: 'amazon/*.jar', include: '*.jar')
+    googleCompile name: 'ads_adman_2.2.7'
+    amazonCompile name: 'ads_adman_2.2.7'
+    compile name: 'appsflyer'
+    compile name: 'comscore'
+    compile name: 'flurry_analytics_5.5.0'
+//    googleCompile name: 'flurry_analytics_5.5.0'
+//    amazonCompile name: 'flurry_analytics_5.5.0'
+    compile name: 'offerwalls_sponsorpay'
 
     //Library for WebSocket and other network requests
     compile 'com.koushikdutta.async:androidasync:2.1.5'
@@ -227,6 +246,16 @@ dependencies {
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
     qaCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
+
+    ifreeCompile('com.ifree.monetize:monetization-library:2.2.3') {
+        exclude group: "com.fasterxml.jackson.core"
+        exclude module: "support-v4"
+    }
+    ifreeCompile(
+            [group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.3.3'],
+            [group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.3.3'],
+            [group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.3.3']
+    )
 }
 
 project(':libs:IllustratedTextView') {
