#39903: new flavour i-free

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,4 @@ ANDROID_BUILD_SUPPORT_LIBRARY_VERSION=com.android.support:support-v4:21.0.2
 ANDROID_BUILD_SUPPORT_APPCOMPAT_VERSION=com.android.support:appcompat-v7:21.0.3
 #org.gradle.daemon=true
 org.gradle.parallel=true
+manifestmerger.enabled = true
