--- a/build.gradle
+++ b/build.gradle
@@ -86,7 +86,12 @@ android {
             buildConfigField "String", "STATISTICS_APP", "\"topfacemobappandroidnokia\"";
         }*/
         ifree {
+            multiDexEnabled true
+            applicationId "com.topface.topface.ifree";
+            buildConfigField "com.topface.billing.MarketApiType", "MarketApiType", "com.topface.billing.MarketApiType.I_FREE";
             buildConfigField "String", "STATISTICS_APP", "\"topfacemobappifree\"";
+            buildConfigField "com.topface.billing.MarketApiType", "MARKET_API_TYPE",
+                    "com.topface.billing.MarketApiType.I_FREE";
         }
     }
 
@@ -247,6 +252,7 @@ dependencies {
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
     qaCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
 
+    // I-FREE dependency
     ifreeCompile('com.ifree.monetize:monetization-library:2.2.3') {
         exclude group: "com.fasterxml.jackson.core"
         exclude module: "support-v4"
@@ -256,6 +262,9 @@ dependencies {
             [group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.3.3'],
             [group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.3.3']
     )
+    ifreeCompile 'com.android.support:multidex:1.0.1'
+    ifreeCompile fileTree(dir: 'ifree/libs', include: '*.jar')
+    // />
 }
 
 project(':libs:IllustratedTextView') {
