--- a/build.gradle
+++ b/build.gradle
@@ -191,6 +191,11 @@ android {
         //что нет many формы в польском и украинском в дальнейшем поправим
         //(пока many = other)
     }
+    sourceSets {
+        ifree {
+            manifest.srcFile 'AndroidManifest1.xml'
+        }
+    }
 }
 
 dependencies {
