--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -473,45 +473,68 @@
             </intent-filter>
         </receiver>
 
-        <meta-data android:name="com.appodeal.framework" android:value="android" />
-        <activity android:name="com.appodeal.ads.InterstitialActivity"
+        <!--Приведенная ниже херь, естьрезультат внедрения appodeal, и при выпиливании этой рекломной сети-->
+        <!--все это можно выпилить, быстро, решительно!-->
+        <!--НАЧАЛО ТУТ-->
+
+        <meta-data
+            android:name="com.appodeal.framework"
+            android:value="android" />
+
+        <activity
+            android:name="com.appodeal.ads.InterstitialActivity"
             android:configChanges="orientation|screenSize"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
-        <activity android:name="com.appodeal.ads.VideoActivity"
+        <activity
+            android:name="com.appodeal.ads.VideoActivity"
+            android:configChanges="orientation|screenSize"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+        <activity
+            android:name="com.appodeal.ads.LoaderActivity"
             android:configChanges="orientation|screenSize"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
 
-        <activity android:name="com.appodeal.ads.LoaderActivity"
-            android:configChanges="orientation|screenSize"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
 
-        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
-        <activity android:name="com.chartboost.sdk.CBImpressionActivity"
-            android:theme="@android:style/Theme.Translucent"
-            android:excludeFromRecents="true" />
-        <activity android:name="com.applovin.adview.AppLovinInterstitialActivity"
+        <activity
+            android:name="com.chartboost.sdk.CBImpressionActivity"
+            android:excludeFromRecents="true"
             android:theme="@android:style/Theme.Translucent" />
-        <activity android:name="com.mopub.mobileads.MoPubActivity"
+        <activity
+            android:name="com.applovin.adview.AppLovinInterstitialActivity"
+            android:theme="@android:style/Theme.Translucent" />
+        <activity
+            android:name="com.mopub.mobileads.MoPubActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:theme="@android:style/Theme.Translucent" />
-        <activity android:name="com.mopub.common.MoPubBrowser"
+        <activity
+            android:name="com.mopub.common.MoPubBrowser"
             android:configChanges="keyboardHidden|orientation|screenSize" />
-        <activity android:name="com.mopub.mobileads.MraidActivity"
+        <activity
+            android:name="com.mopub.mobileads.MraidActivity"
             android:configChanges="keyboardHidden|orientation|screenSize" />
-        <activity android:name="com.mopub.mobileads.MraidVideoPlayerActivity"
+        <activity
+            android:name="com.mopub.mobileads.MraidVideoPlayerActivity"
             android:configChanges="keyboardHidden|orientation|screenSize" />
-        <activity android:name="org.nexage.sourcekit.mraid.MRAIDBrowser"
+        <activity
+            android:name="org.nexage.sourcekit.mraid.MRAIDBrowser"
             android:configChanges="orientation|keyboard|keyboardHidden|screenSize"
             android:theme="@android:style/Theme.Translucent" />
-        <activity android:name="com.amazon.device.ads.AdActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"/>
-        <activity android:name="com.unity3d.ads.android.view.UnityAdsFullscreenActivity"
+        <activity
+            android:name="com.amazon.device.ads.AdActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize" />
+        <activity
+            android:name="com.unity3d.ads.android.view.UnityAdsFullscreenActivity"
             android:configChanges="fontScale|keyboard|keyboardHidden|locale|mnc|mcc|navigation|orientation|screenLayout|screenSize|smallestScreenSize|uiMode|touchscreen"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-            android:hardwareAccelerated="true" />
+            android:hardwareAccelerated="true"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
+        <activity
+            android:name="ru.mail.android.mytarget.ads.MyTargetActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
 
-
-        <activity android:name="ru.mail.android.mytarget.ads.MyTargetActivity" android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
+        <!--КОНЕЦ-->
 
     </application>
 
