--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -473,8 +473,8 @@
             </intent-filter>
         </receiver>
 
-        <!--Приведенная ниже херь, естьрезультат внедрения appodeal, и при выпиливании этой рекломной сети-->
-        <!--все это можно выпилить, быстро, решительно!-->
+        <!--Приведенная ниже херь, есть результат внедрения appodeal, и при удалении этой рекломной сети-->
+        <!--все это нужно выпилить, быстро, решительно!-->
         <!--НАЧАЛО ТУТ-->
 
         <meta-data
