--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -177,13 +177,11 @@
             android:theme="@style/Theme.Transparent" />
         <activity
             android:name=".ui.GiftsActivity"
-            android:screenOrientation="portrait"
             android:theme="@style/Theme.Topface.Gifts" />
         <activity android:name=".ui.TopfaceAuthActivity" />
         <activity
             android:name=".ui.CitySearchActivity"
             android:label="@string/edit_my_city"
-            android:screenOrientation="portrait"
             android:theme="@style/Theme.Topface.Light"
             android:windowSoftInputMode="stateVisible" />
         <activity
@@ -195,7 +193,7 @@
         <activity
             android:name=".ui.settings.SettingsContainerActivity"
             android:parentActivityName=".ui.NavigationActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="sensor">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.NavigationActivity" />
@@ -243,7 +241,7 @@
         <activity
             android:name=".ui.OwnGiftsActivity"
             android:parentActivityName=".ui.NavigationActivity"
-            android:screenOrientation="portrait"
+            android:screenOrientation="sensor"
             android:theme="@style/Theme.Topface.Gifts">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -253,7 +251,7 @@
         <activity
             android:name=".ui.ComplainsActivity"
             android:parentActivityName=".ui.NavigationActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="sensor">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.NavigationActivity" />
@@ -262,7 +260,7 @@
         <activity
             android:name=".ui.EditorBannersActivity"
             android:parentActivityName=".ui.NavigationActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="sensor">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.NavigationActivity" />
@@ -271,7 +269,7 @@
         <activity
             android:name=".ui.EditorProfileActionsActivity"
             android:parentActivityName=".ui.NavigationActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="sensor">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.NavigationActivity" />
@@ -308,7 +306,6 @@
         <activity
             android:name=".ui.ComplainsMessageActivity"
             android:parentActivityName=".ui.ComplainsActivity"
-            android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysVisible|adjustResize">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
